@@ -2836,6 +2836,18 @@ Playing a file with \-v will show a list of available devices.
 .PD 1
 .
 .TP
+.B dart (OS/2 only)
+OS/2 DART audio output driver
+.PD 0
+.RSs
+.IPs (no)share
+Open DART in shareable or exclusive mode.
+.IPs bufsize=<size>
+Set buffer size to <size> in samples (default: 2048).
+.RE
+.PD 1
+.
+.TP
 .B dxr2 (also see \-dxr2) (DXR2 only)
 Creative DXR2 specific output driver
 .
